src/App.css
.header {
    background-color: #2b2b2b;
    height: 100px;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    text-align: center;
    color: white;
    font-family: Arial, Helvetica, sans-serif;
}

.header div {
    display: inline-flex;
    margin-top: 10px;
}

.header img {
    width: 80px;
    height: 80px;
}

.header h2 {
    margin-left: 5px;
    font-size: xx-large;
}

.main {
    margin-top: 115px;
    display: inline-flex;
}

.editor {
    height: 75vh;
    width: 48%;
    border: 1px black solid;
    font-size: 22px;
}

.previewer {
    height: 75.7vh;
    width: 48%;
    margin-left: 2%;
    padding-left: 15px;
    padding-right: 15px;
    border: 1px black solid;
    overflow-y: auto;
}

.preview img {
    width: 100%
}

